# ELTEVectorMathLibrary

./: .gitignore  CMakeLists.txt  ELTEVectorMathLibrary.sln  README.md
ELTEVectorMathLibrary/: ELTEVectorMathLibrary.vcxproj  ELTEVectorMathLibrary.vcxproj.filters  Matrix.cpp  Matrix.h  Quaternion.h  Scalar.h  Vector.cpp  Vector.h
ELTEVectorMathLibrary_Benchmark/: ELTEVectorMathLibrary_Benchmark.vcxproj.filters  Timer.h  main.cpp
ELTEVectorMathLibrary_Test/: ELTEVectorMathLibrary_Test.vcxproj  main.cpp
include/: Matrix.h  Quaternion.h  SSEMatrix.h  SSEQuaternion.h  SSEVector.h  Scalar.h  Vector.h
src/: CMakeLists.txt  Matrix.cpp  Quaternion.cpp  SSEMatrix.cpp  SSEQuaternion.cpp  SSEVector.cpp  Vector.cpp
test/: main.cpp
